// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A1.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
/**
 * @providesModule A
 * @flow
 */

=====================================output=====================================
/**
 * @providesModule A
 * @flow
 */

================================================================================
`;

exports[`A3.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow

require('A');

=====================================output=====================================
// @flow

require("A");

================================================================================
`;

exports[`B1.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
/**
 * @flow
 */

require('B2');
require('B3');

=====================================output=====================================
/**
 * @flow
 */

require("B2");
require("B3");

================================================================================
`;

exports[`B3.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
/**
 * @providesModule B3
 * @flow
 */

require('B2');

=====================================output=====================================
/**
 * @providesModule B3
 * @flow
 */

require("B2");

================================================================================
`;
